--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-navigation-tabs": "^2.5.6",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
-    "redux-form": "^8.2.6"
+    "redux-persist": "5.10.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0"
