--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-app-link": "^1.0.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-reanimated": "^1.2.0",
+    "react-native-rem-stylesheet": "^0.1.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
